[package]
name = "heffalump_conduit_installer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
hotsync_conduit_rs = { git = "https://github.com/knickish/hotsync_conduit_rs", tag = "v0.3.1" }
heffalump_conduit = { path = "conduit" , artifact = "cdylib", target = "i686-pc-windows-msvc" }