[package]
name = "heffalump_conduit_installer"
version = "0.2.1"
edition = "2021"
resolver = "2"

[dependencies]
hotsync_conduit_rs = { git = "https://github.com/knickish/hotsync_conduit_rs", tag = "v0.4.0" }
heffalump_conduit = { path = "conduit" , artifact = "cdylib", target = "i686-pc-windows-msvc" }
