[package]
name = "heffalump_conduit"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
encoding = "0.2.33"
hotsync_conduit_rs = { git = "https://github.com/knickish/hotsync_conduit_rs", tag = "v0.4.0"}
html2text = "0.12.5"
http = "1.1.0"
log = "0.4.20"
megalodon = "0.13.8"
open = "5.0.0"
palmrs = { git = "https://github.com/u1f408/palmrs", rev = "008687c" }
pollster = "0.3.0"
scraper = "0.20.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = {version = "1.0.107", features = ["preserve_order"]}
simplelog = "0.12.1"
tokio = { version = "1.32.0", features = ["tokio-macros"] }
winapi = { version = "0.3.9", features = ["consoleapi"] }

[lib]
crate-type = ["cdylib"]
